# legal-hallucination-mcp

./: .env.example  .gitignore  CHANGELOG.md  DIRECTORY_TREE.txt  README.md  README_EN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: dev_plan_v2.md  法律引用与幻觉规避操作手册_v3.0_20260529.md
scripts/: _paths.py  batch_fix_h2.py  batch_test_11docs.py  extract_h2.py  multi_version_scan.py  run_detection.py  run_detection_legacy.py  run_detection_v41.py  scan_v42.py  tmp_verify_fix.py  update_evidence_manifest.py  v40_v43_analysis.py  vault_mirror_manager.py  verify_agent.py  verify_v40.py  verify_v42_fixed.py
src/legal_hallucination_mcp/: __init__.py  claim_parser.py  config.py  cross_reference_engine.py  evidence_index.py  evidence_manifest_updater.py  law_citation_checker.py  law_knowledge_base.py  models.py  report_builder.py  response_parser.py  rule_engine.py  server.py  skill_runner.py  vector_index.py  verify_agent.py  web_verifier.py  workflow_orchestrator.py
src/legal_hallucination_mcp/skills/dimensions/: h1_sourceless_fabrication.md  h2_law_misapplication.md  h3_evidence_chain_break.md  h4_subjective_rhetoric.md  h5_claim_boundary_breach.md  h6_nontext_evidence_fail.md
tests/: test_adversarial.py  test_integration.py  test_orchestration.py  test_regex_fix.py
